2006-02-03  Diego Novillo  <dnovillo@redhat.com>

	* gcc.dg/gomp/pr25990.c: Replace with pre-processed version.

2006-02-03  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/template/using12.C: New test.

2006-02-03  Alan Modra  <amodra@bigpond.net.au>

	* gcc.target/powerpc/pr25960.c: New test.

2006-02-02  Steven G. Kargl  <kargls@comcast>

	PR fortran/24958
        gfortran.dg/nullify_2.f90: New test.

2006-02-02  Diego Novillo  <dnovillo@redhat.com>

	PR 25990
	* gcc.dg/gomp/pr25990.c: New test.

2006-01-31  Mark Mitchell  <mark@codesourcery.com>

	PR c++/25342
	* g++.gd/template/partial4.C: New test.

2006-01-31  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/26001
	* gfortran.dg/data_char_2.f90: New.

2006-01-31  Thomas Koenig  <Thomas.Koenig@online.de>

	PR fortran/26039
	maxval_maxloc_conformance_1.f90:  New test.

2006-01-31  Richard Guenther  <rguenther@suse.de>

	* gcc.target/i386/sselibm-1.c: New testcase.
	* gcc.target/i386/sselibm-2.c: Likewise.
	* gcc.target/i386/sselibm-3.c: Likewise.
	* gcc.target/i386/sselibm-4.c: Likewise.
	* gcc.target/i386/sselibm-5.c: Likewise.

2005-01-30  Erik Edelmann  <eedelman@gcc.gnu.org>

	PR fortran/24266
	* gfortran.dg/arrayio_derived_2.f90: New.

2006-01-30  Carlos O'Donell  <carlos@codesourcery.com>

	* gcc.dg/unsigned-long-compare.c: New test.

2006-01-30  Steve Ellcey  <sje@cup.hp.com>

	PR testsuite/25318
	* lib/target-supports.exp (check_effective_target_freorder):
	Check to see if target supports -freorder-blocks-and-partition.
	* g++.dg/other/pr22003.C: Use "dg-require-effective-target freorder"
	instead of "dg-require-named-sections".

2006-01-30  J"orn Rennecke <joern.rennecke@st.com>

	PR target/14798:
	* gcc.dg/pragma-isr.c: Added target sh[1234ble]*-*-*.
	* gcc.dg/pragma-isr2.c, gcc.dg/pragma-isr-trapa.c: New tests.
	* gcc.dg/pragma-isr-trapa2.c: Likewise.
	* gcc.dg/pragma-isr-nosave_low_regs.c: Likewise.
	* gcc.dg/pragma-isr-trap_exit.c: Likewise.